# hooky

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  SECURITY.md  plan.md
.beads/: issues.jsonl
.claude/hooks/: block-no-verify.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: configuration.md  how-it-works.md
docs/specs/: 00-overview.md
scripts/: bump-patch.sh
src/: lib.rs
src/hooky/: audit.rs  config.rs  decision.rs  doctor.rs  evaluator.rs  mod.rs
src/safe_codex/: audit.rs  config.rs  doctor.rs  evaluator.rs
src/types/: response.rs
tests/: hooky_cli.rs  safe_codex_cli.rs
